# Multi_User_through_Single_User

./: README.md
log/: latest_build
src/Azure_Kinect_ROS_Driver/launch/: driver.launch.py
src/Azure_Kinect_ROS_Driver/src/: k4a_ros_device.cpp
src/acquisition_block/: CMakeLists.txt  package.xml
src/acquisition_block/install/: local_setup.sh  setup.sh
src/acquisition_block/install/acquisition_block/lib/acquisition_block/: bag_recorder  example_bag
src/acquisition_block/install/acquisition_block/share/acquisition_block/: local_setup.dsv  package.bash  package.ps1  package.sh  package.zsh
src/acquisition_block/install/acquisition_block/share/acquisition_block/launch/: record_all_data.launch.py
src/acquisition_block/launch/: record_all_data.launch.py  record_pairs_offline.launch.py
src/acquisition_block/log/: latest_build
src/acquisition_block/src/: bag_recorder.cpp  dynamic_labelling.cpp
src/data/second_collection/csv/: .~lock.s01_a02_t01_r05.csv#  s01_a01_t01_r01.csv  s01_a01_t01_r02.csv  s01_a01_t01_r03.csv  s01_a01_t01_r04.csv  s01_a01_t01_r05.csv  s01_a01_t01_r06.csv  s01_a01_t02_r01.csv  s01_a01_t02_r02.csv  s01_a01_t02_r03.csv  s01_a01_t02_r04.csv  s01_a01_t02_r05.csv  s01_a01_t02_r06.csv  s01_a01_t03_r01.csv  s01_a01_t03_r02.csv  s01_a01_t03_r03.csv  s01_a01_t03_r04.csv  s01_a01_t03_r05.csv  s01_a01_t03_r06.csv  s01_a01_t04_r01.csv  s01_a01_t04_r02.csv  s01_a01_t04_r03.csv  (+829 more)
src/install/: local_setup.sh  setup.sh
src/libraries/: setup.py
src/libraries/my_libraries.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/networks/: vae_losofinal.py
(+273 files in other folders)
